fix tooltip alignment

--- a/packages/core/components/ListPicker/ListRow.module.css
+++ b/packages/core/components/ListPicker/ListRow.module.css
@@ -26,6 +26,7 @@
     justify-content: space-between;
     padding-left: 6px;
     width: 100%;
+    height: 35px;
 }
 
 .item-container:hover:not(.disabled) {
